fix spacing

--- a/src/app/subject/components/source-graphs/source-graph/source-graph.component.scss
+++ b/src/app/subject/components/source-graphs/source-graph/source-graph.component.scss
@@ -58,4 +58,5 @@ app-chart-base-line,
 app-chart-base-multi-line {
   flex: 1;
   margin-right: 8px;
+  padding-top: 6px;
 }
